tests/ui/resolve/bad-type-env-capture.stderr
error[E0401]: can't use generic parameters from outer item
  --> $DIR/bad-type-env-capture.rs:2:15
   |
LL | fn foo<T>() {
   |        - type parameter from outer item
LL |     fn bar(b: T) { }
   |           -   ^ use of generic parameter from outer item
   |           |
   |           help: try introducing a local generic parameter here: `<T>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0401`.
